--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
-    "@electron-toolkit/utils": "^1.0.2"
+    "@electron-toolkit/utils": "^1.0.2",
+    "electron-devtools-installer": "3.2.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
@@ -33,13 +34,13 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "electron": "^21.3.0",
     "electron-builder": "^23.6.0",
-    "electron-vite": "^1.0.14",
+    "electron-vite": "^1.0.16",
     "eslint": "^8.28.0",
     "eslint-plugin-vue": "^9.7.0",
     "less": "^4.1.3",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3",
-    "vite": "^3.2.4",
+    "vite": "^3.2.0",
     "vue": "^3.2.45",
     "vue-tsc": "^1.0.9"
   }
